post api impliment

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<head>
-    <title>Orbo.ai_Assignment</title>
-</head>
-<body>
-    <h1 style="background-color: aqua;">welcome to my page</h1>
-    
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Tilting Navigation</title>
+  </head>
+  <body>
+
+    <div class="container">
+
+      <div class="circle-container">
+	<!-- Contains another div having 2 buttons. Each button has an icon -->
+      </div>
+
+      <div class="content">
+	<!-- Contains 2 sections. Section one has a heading, small and paragraph element -->
+	<!-- Section two has a smaller heading, related image and a paragraph -->
+      </div>
+
+    </div>
+
+    <nav>
+	<!-- Contains 3 unordered list items. Each item has an icon and a relevant hyperlinked text-->
+    </nav>
+
+    <script src="script.js"></script>
+  </body>
 </html>
